home.html v2 and image

--- a/home.html
+++ b/home.html
@@ -7,6 +7,49 @@
     <title>Responsive Example</title>
 </head>
 <body>
+
+    <div class="Wrapper>"
+
+    <header>
+        <p>Bootstrap Web Design</p>
+    </header>
+
+    <main>
+
+    <article>
+
+        <img src="Images/SPD.jpg" alt="">
+
+        <h1>SPD General</h1>
+        <p>Schizoid personality disorder (SPD) is a chronic and pervasive condition characterized by social isolation and feelings of 
+            indifference toward other people. 1 Those who live with this disorder are often described as distant or withdrawn and tend to 
+            avoid social situations that involve interaction with other people.
+        </p>
+
+        <h2>SPD Behaviour</h2>
+        <p>Schizoid personality disorder is an uncommon condition in which people avoid social activities and consistently shy away from 
+            interaction with others. They also have a limited range of emotional expression.
+        </p>
+
+    </article>
+
+    </main>
+
+    <aside>
+
+        <ul>
+            <li>Prefer being alone and choose to do activities alone.</li>
+            <li>Don't want or enjoy close relationships.</li>
+            <li>Feel like you can't experience pleasure.</li>
+        </ul>
+
+    </aside>
+
+    <footer>
+        <p>&copy; Bootstrap Web Design, 2021</p>
+    </footer>
+
+    </div> <!-- .Wrapper -->
     
 </body>
 </html>
