--- a/bt.html
+++ b/bt.html
@@ -55,6 +55,27 @@
                 </div>
 
                 </div> <!-- row of main and aside-->
+        
+                <div class="row">
+                    <div class="col-md-4 news news1">
+                        <h3>News 1</h3>
+                        <p>Dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing 
+                            elit.</p>
+                    </div>
+                    <div class="col-md-4 news news2">
+                        <h3>News 2</h3>
+                        <p>Adipiscing elit. Lorem ipsum dolor sit amet, consectetur dolor sit amet adipiscing 
+                            elit.</p>
+                    </div>
+                    <div class="col-md-4 news news3">
+                        <h3>News 3</h3>
+                        <p>Consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing 
+                            elit.</p>
+                    </div>
+                </div> <!-- news row -->
+
+
+
 
             <div class="row">
                 <div class="col-mid-12">
