--- a/bt.html
+++ b/bt.html
@@ -7,6 +7,8 @@
 
             <!-- Bootstrap CSS -->
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+            <!-- Overriding Custom CSS -->
+            <link href="bt-custom.css" rel="stylesheet">
 
             <title>Bootstrap Web Design</title>
         </head>
@@ -95,20 +97,26 @@
                 </div> <!-- row of main and aside-->
         
                 <div class="row">
-                    <div class="col-md-4 news news1">
+                    <div class="col-md-4">
+                        <div class="news news1">
                         <h3>News 1</h3>
                         <p>Dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing 
                             elit.</p>
                     </div>
-                    <div class="col-md-4 news news2">
+                </div>
+                    <div class="col-md-4">
+                        <div class="news news2">
                         <h3>News 2</h3>
                         <p>Adipiscing elit. Lorem ipsum dolor sit amet, consectetur dolor sit amet adipiscing 
                             elit.</p>
+                        </div>
                     </div>
-                    <div class="col-md-4 news news3">
+                    <div class="col-md-4">
+                        <div class="news news3">
                         <h3>News 3</h3>
                         <p>Consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing 
                             elit.</p>
+                        </div>
                     </div>
                 </div> <!-- news row -->
 
