--- a/Martin1.html
+++ b/Martin1.html
@@ -15,7 +15,7 @@
     <div class="game-container">
 
         <div class="image-shadow">
-            <img src="Images/SPD.jpg" alt="Rogue's end">
+            <img src="Images/rogues_end.jpg" alt="Rogue's end">
         </div>
 
 
